feat: Enhanced DLNA casting with Android/iOS native implementations
- Added RNByronDLNAModuleEnhanced.java: Android DLNA casting module
  - Device discovery with MediaRenderer detection
  - Cast to device with retry logic and timeout handling
  - Playback controls (play/pause/stop)
  - Real-time device found/lost events
  - Progress notifications (connecting/buffering/playing)

- Added RNByronDLNAEnhanced.mm: iOS DLNA casting module
  - UPnP device discovery and management
  - Cast video to devices with AVTransport control
  - Playback control implementation
  - Event-based device tracking

- Added index-enhanced.js: Enhanced JavaScript API
  - discoverDevices(): Promise-based device discovery
  - castToDevice(): Automatic retry with exponential backoff
  - controlPlayback(): Remote playback control
  - Helper functions: findSamsungTV(), filterDevices()
  - New event names: deviceFoundEventName, deviceLostEventName, castProgressEventName

- Added index-enhanced.d.ts: Full TypeScript definitions
  - DLNADevice interface with all device properties
  - Enhanced VlcProps with complete type safety
  - Event handler types and enums

- Added example/CastingExample.js: Complete working example
  - Real-world Samsung TV casting implementation
  - Device discovery UI with auto-selection
  - Multiple sample videos + custom URL support
  - Playback controls with status monitoring
  - Error handling and user feedback

- Updated android/build.gradle: Added Cling UPnP dependencies
- Updated android/src/main/AndroidManifest.xml: Network permissions
- Updated react-native-dlna-player.podspec: iOS deployment target

Total additions: 2593+ lines across 8 files

By mosaad using Claude Code

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -7,14 +7,34 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!-- Foreground service with media playback type for Android 13+ -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- Storage permissions for Android 12 and below -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+                     android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+                     android:maxSdkVersion="32" />
+
+    <!-- Media permissions for Android 13+ -->
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+
+    <!-- Notification permission for Android 13+ -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application>
-        <service android:name="org.fourthline.cling.android.AndroidUpnpServiceImpl" />
+        <!-- Service with foreground service type for media playback -->
+        <service android:name="org.fourthline.cling.android.AndroidUpnpServiceImpl"
+                 android:foregroundServiceType="mediaPlayback"
+                 android:exported="false" />
     </application>
 </manifest>
