--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,12 +5,17 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-    compileSdkVersion safeExtGet("compileSdkVersion", 29)
-    buildToolsVersion safeExtGet("buildToolsVersion", '29.0.3')
+    compileSdkVersion safeExtGet("compileSdkVersion", 34)
+    buildToolsVersion safeExtGet("buildToolsVersion", '34.0.0')
 
     defaultConfig {
-        minSdkVersion safeExtGet('minSdkVersion', 16)
-        targetSdkVersion safeExtGet('targetSdkVersion', 29)
+        minSdkVersion safeExtGet('minSdkVersion', 21)
+        targetSdkVersion safeExtGet('targetSdkVersion', 34)
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
@@ -34,8 +39,9 @@ dependencies {
     implementation files('libs/seamless-util-1.0-alpha2.jar')
     implementation files('libs/seamless-xml-1.0-alpha2.jar')
 
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'org.greenrobot:eventbus:3.3.1'
 
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'org.videolan.android:libvlc-all:3.1.12'
+    implementation 'androidx.annotation:annotation:1.7.1'
+    implementation 'androidx.core:core:1.12.0'
+    implementation 'org.videolan.android:libvlc-all:3.6.2'
 }
