refactor: Consolidate to single enhanced index with all features
- Replaced index.js with enhanced version containing all DLNA casting features
- Replaced index.d.ts with comprehensive TypeScript definitions
- Removed duplicate index-enhanced.js and index-enhanced.d.ts files
- Updated package.json to include example folder in published files

All functionality now available from single import:
- Original VLC player component (ByronPlayer)
- DLNA service controls (startService, closeService)
- Device discovery (discoverDevices)
- Casting API (castToDevice, controlPlayback)
- Helper functions (findSamsungTV, filterDevices)
- Event emitters (deviceFoundEventName, deviceLostEventName, castProgressEventName)
- Full TypeScript support with error codes

By mosaad using Claude Code

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "android",
     "index.js",
     "index.d.ts",
+    "example",
     "ios",
     "react-native-dlna-player.podspec",
     "Neptune.framework",
